# hello-officeboy-dev

./: .clever.json  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs
api-docs/: private-api.md  private-endpoints.raw.txt  public-api.md  public-endpoints.raw.txt
docker/: Dockerfile  README.md  build.sh  build_init_sql.py  docker-compose.yml  start.sh
docker/postgre_server/: Dockerfile  init.sql
etc/script/: gen_api_docs.py  gen_test_users.py
frontends/admin/: package-lock.json  package.json
frontends/admin-react/: package-lock.json
frontends/admin-react/public/: index.html
frontends/admin-react/src/: App.js
frontends/admin-vue/: README.md  package.json
frontends/admin-vue/public/: index.html
frontends/admin-vue/src/: App.vue  main.js  router.js
frontends/admin/src/: App.css  App.js
frontends/mobile-flutter/: .flutter-plugins  .packages  pubspec.yaml
frontends/mobile-flutter/lib/: main.dart
frontends/mobile-react-native/: App.js  app.json  package-lock.json  package.json
frontends/mobile-react-native/components/: Login.js  LoginForm.js
libs/apf-client-js/: index.js  package.json
libs/apf-client-py/: apf.py
macros/apf_proc_macro/: Cargo.toml
macros/apf_proc_macro/src/: lib.rs
migrations/2019-02-01-041417_create_accounts/: down.sql  up.sql
migrations/2019-02-02-052715_auth/: up.sql
migrations/2019-02-02-115310_pay_invoice/: down.sql  up.sql
migrations/2019-02-11-114556_merchant/: down.sql  up.sql
migrations/2019-02-12-062755_transactions/: down.sql  up.sql
migrations/2019-02-12-113427_activation_code/: down.sql  up.sql
src/: auth.rs  crypto.rs  db.rs  error.rs  lib.rs  macros.rs  models.rs  schema.rs  schema_op.rs  service.rs  token.rs  tx.rs  util.rs  valid.rs
src/api/: error.rs  mod.rs  payment.rs  with.rs
src/protos/: apf.proto  mod.rs
src/service/: auth.rs  mod.rs  payment.rs
testkit/: Cargo.toml
testkit/src/: helper.rs  lib.rs
tests/: account.rs  api.rs
tests/common/: mod.rs
(+31 files in other folders)
