[package]
name = "payment"
version = "0.1.0"
authors = ["robin <robin@ansvia.com>"]
edition = "2018"
description = "Ansvia Payment Framework"

[dependencies]
diesel = { version = "1.4", default-features = false, features = ["32-column-tables", "postgres"]}
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
futures = "0.1"
failure = "=0.1.5"
log = "0.4"
env_logger = "0.6"

serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"

regex = "1"
