[package]
name = "apf"
version = "0.1.0"
authors = ["robin <robin@ansvia.com>"]
edition = "2018"
description = "Ansvia Payment Framework"

[features]
default = ["with-serde"]
with-serde = []
with-test = []

[dependencies]
# actix = "0.7"
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.1"
failure = "=0.1.5"
log = "0.4"
env_logger = "0.6"
sodiumoxide = "0.2"
byteorder = "1.3"
hex = "0.3"
regex = "1"
rand = "0.6"

serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"

protobuf = { version = "2.2.5", features = ["with-serde"] }

diesel = { version = "1.4", default-features = false, features = ["32-column-tables", "postgres", "chrono"]}
dotenv = "0.13"

apf-proc-macro = { path = "./macros/apf_proc_macro" }

rsnowflake = "0.1"

[dev-dependencies]
apf-testkit = { version = "0.1.0", path = "./testkit" }

[build-dependencies]
protoc-rust = "2.0"
chrono = { version = "0.4" }