[package]
name = "apf-testkit"
version = "0.1.0"
authors = ["robin <robin@ansvia.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
reqwest = "=0.9.5"
log = "0.4"
env_logger = "0.6"
failure = "=0.1.5"
sodiumoxide = "0.2"

serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"
serde_urlencoded = "=0.5.4"

diesel = { version = "1.4", default-features = false, features = ["32-column-tables", "postgres", "chrono"]}

apf = { path = "../", features = ["with-test"] }

